--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = simplepypkg
+name = simplepypkgtest
 author = tetsuzawa <tetsu.takizawa5@gmail.com>
 author_email = tetsu.takizawa5@gmail.com
-url = https://github.com/tetsuzawa/simplepypkg
+url = https://github.com/tetsuzawa/simplepypkgtest
 project_urls =
-    Source Code = https://github.com/tetsuzawa/simplepypkg
-    Bug Tracker = https://github.com/tetsuzawa/simplepypkg
+    Source Code = https://github.com/tetsuzawa/simplepypkgtest
+    Bug Tracker = https://github.com/tetsuzawa/simplepypkgtest
 license = MIT
 license_file = LICENSE
 description = A simple python pkg for testing.
@@ -27,6 +27,6 @@ universal = 1
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = simplepypkg/_version.py
-versionfile_build = simplepypkg/_version.py
+versionfile_source = simplepypkgtest/_version.py
+versionfile_build = simplepypkgtest/_version.py
 tag_prefix = ''
